--- a/app/src/main/res/layout/fragment_python_comments_1.xml
+++ b/app/src/main/res/layout/fragment_python_comments_1.xml
@@ -110,7 +110,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/p_the_types_of_comments"
+            android:text="@string/c_the_types_of_comments"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -125,7 +125,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/p_single_line_comments"
+            android:text="C# Single Line Comment"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -140,7 +140,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/python_single_line_comments"
+            android:text="The single line comment starts with // (double slash). Let's see an example of single line comment in C#."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -165,7 +165,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:text="@string/P_comments_textview9"
+            android:text="@string/c_comments_textview9"
             app:layout_constraintBottom_toBottomOf="@+id/P_Syntax_imageView"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
